src/markdown/snapshots/shiba_preview__markdown__parser__tests__inline_html_inside_blockquote.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            {
              "raw": "",
              "t": "html"
            }
          ],
          "t": "p"
        }
      ],
      "t": "blockquote"
    }
  ]
}
