src/markdown/snapshots/shiba_preview__markdown__parser__tests__non_printable.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "�"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0001"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0002"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0003"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0004"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0005"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0006"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0007"
          ],
          "t": "li"
        },
        {
          "c": [],
          "t": "li"
        },
        {
          "c": [],
          "t": "li"
        },
        {
          "c": [],
          "t": "li"
        },
        {
          "c": [
            "\u000e"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u000f"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0010"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0011"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0012"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0013"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0014"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0015"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0016"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0017"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0018"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u0019"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001a"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001b"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001c"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001d"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001e"
          ],
          "t": "li"
        },
        {
          "c": [
            "\u001f"
          ],
          "t": "li"
        },
        {
          "c": [
            ""
          ],
          "t": "li"
        }
      ],
      "t": "ul"
    }
  ]
}
