src/markdown/snapshots/shiba_preview__markdown__parser__tests__offset_in_emphasis.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "c": [
            "this is ",
            {
              "t": "modified"
            },
            "test. this is test."
          ],
          "t": "strong"
        }
      ],
      "t": "p"
    }
  ]
}
