src/markdown/snapshots/shiba_preview__markdown__parser__tests__strikethrough.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        "this ",
        {
          "c": [
            "text is declined"
          ],
          "t": "del"
        },
        " is test"
      ],
      "t": "p"
    }
  ]
}
