src/markdown/snapshots/shiba_preview__markdown__parser__tests__unmatched_inline_html.snap
---
source: src/markdown/parser.rs
expression: json
---
{
  "kind": "render_tree",
  "tree": [
    {
      "c": [
        {
          "raw": "<span>X</span>",
          "t": "html"
        }
      ],
      "t": "p"
    }
  ]
}
